# marginplay

./: .gitignore  LICENSE  README.md  pyproject.toml
agents/: bro_marl.py  buffer.py  definitions.py  networks.py  noise.py  trainer.py
core/: environment.py  physics.py  scenarios.py  state.py  world.py  zonas.py
scripts/: analyze_sweep.py  gen_parity_episode_fixtures.py  gen_parity_fixtures.py  sweep.py  train.py
